desktop version small fixes

--- a/css/src/pricing.scss
+++ b/css/src/pricing.scss
@@ -35,18 +35,22 @@
             justify-content: space-between;
             align-items:flex-end;
             width: 100%;
+            height: 100%;
 
             .option{
+                user-select: none;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                justify-content: center;
                 width: 30%;
                 border-bottom-left-radius: 5px;
                 border-bottom-right-radius: 5px;
                 border-top-right-radius: 5px;
                 border-top-left-radius: 5px;
                 transition: ease-in-out .5s;
-                
+                cursor: pointer;
+
                 &:hover{
                     transform: translate(0,-10px);
                 }
@@ -103,15 +107,18 @@
                 }
 
                 .what-you-get{
+                    position: relative;
                     display: inherit;
                     flex-direction: inherit;
                     align-items: center;
+                    justify-content: center;
                     background-color: #FFFFFF;
                     width: 100%;
                     border-bottom-left-radius: inherit;
                     border-bottom-right-radius: inherit;
 
                     .you-get{
+                        align-self: center;
                         padding: 10px 0; 
                         color: #86878B;
                         text-transform: uppercase;
